[gd_scene load_steps=38 format=3 uid="uid://frtgj5uj6n7s"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_dq0rt"]
[ext_resource type="PackedScene" uid="uid://csjlj4qy7pktl" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_head.tscn" id="2_eel4o"]
[ext_resource type="Animation" uid="uid://580swu75bkg6" path="res://scenes/player/playerAnimations/RESET.res" id="2_ktsl2"]
[ext_resource type="PackedScene" uid="uid://dggtc3s8ylkx7" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_right_hand.tscn" id="3_8wfcb"]
[ext_resource type="Animation" uid="uid://bq1gaamwyo1ea" path="res://scenes/player/playerAnimations/idle.res" id="3_qvgsh"]
[ext_resource type="PackedScene" uid="uid://exqvanae0tiw" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_left_hand.tscn" id="3_x0gmy"]
[ext_resource type="PackedScene" uid="uid://csqukmapf6j6y" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_right_shoulder.tscn" id="4_diqbd"]
[ext_resource type="Animation" uid="uid://dbiwxhjqqqafo" path="res://scenes/player/playerAnimations/in_air.res" id="4_dy3qm"]
[ext_resource type="PackedScene" uid="uid://j6qguw7ipqp8" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_left_shoulder.tscn" id="4_hlefo"]
[ext_resource type="PackedScene" uid="uid://cp6j2vgxxkd0v" path="res://scenes/player/playerGear/weapons/longSword.tscn" id="4_wwvhn"]
[ext_resource type="PackedScene" uid="uid://bxsf23gvr3mmj" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_left_leg.tscn" id="5_4rcbk"]
[ext_resource type="Animation" uid="uid://cjihcbgf6347x" path="res://scenes/player/playerAnimations/run.res" id="5_uqns2"]
[ext_resource type="Animation" uid="uid://cvldq075pnnw5" path="res://scenes/player/playerAnimations/flintlock_aim.res" id="6_bravj"]
[ext_resource type="PackedScene" uid="uid://frw2sjqaqako" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_left_foot.tscn" id="6_fyuxa"]
[ext_resource type="PackedScene" uid="uid://dmvwgewnlaygq" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_right_foot.tscn" id="7_0k2ed"]
[ext_resource type="PackedScene" uid="uid://dh42ns6gocqi1" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_torso.tscn" id="7_7cmkj"]
[ext_resource type="PackedScene" uid="uid://cf2yiqklalyaa" path="res://scenes/player/playerGear/weapons/flintlockPistol.tscn" id="7_8lmmm"]
[ext_resource type="PackedScene" uid="uid://d0k7ko4t6bmrl" path="res://scenes/player/playerGear/armour/playerSolomon/p_solomon_right_leg.tscn" id="7_ntxyt"]
[ext_resource type="Animation" uid="uid://b0p0qmyqg6as1" path="res://scenes/player/playerAnimations/flintlock_shoot.res" id="7_uxe3y"]
[ext_resource type="Animation" uid="uid://b14fxosguxu7i" path="res://scenes/player/playerAnimations/walk.res" id="8_dnsbo"]
[ext_resource type="Script" path="res://scripts/player/remoteTransforms.gd" id="13_vfudf"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6ovt"]
_data = {
"RESET": ExtResource("2_ktsl2"),
"flintlock_aim": ExtResource("6_bravj"),
"flintlock_shoot": ExtResource("7_uxe3y"),
"idle": ExtResource("3_qvgsh"),
"in_air": ExtResource("4_dy3qm"),
"run": ExtResource("5_uqns2"),
"walk": ExtResource("8_dnsbo")
}

[sub_resource type="AnimationNodeBlend3" id="AnimationNodeBlend3_0gny3"]

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_8id78"]
xfade_time = 0.1
input_0/name = "aiming"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "notAiming"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8jfl2"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oq02i"]
animation = &"run"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_fbppp"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qd00s"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hgh8o"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_42aw6"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d5no0"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_edcej"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_pcidi"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qd00s")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_hgh8o")
blend_point_1/pos = Vector2(-0.8, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_42aw6")
blend_point_2/pos = Vector2(0, 0.8)
blend_point_3/node = SubResource("AnimationNodeAnimation_d5no0")
blend_point_3/pos = Vector2(0.8, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_edcej")
blend_point_4/pos = Vector2(0, -0.8)

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_5aoor"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_sxeqy"]
graph_offset = Vector2(0, 280.308)
nodes/IdleWalkRunBlend/node = SubResource("AnimationNodeBlend3_0gny3")
nodes/IdleWalkRunBlend/position = Vector2(530, 670)
nodes/aimTransition/node = SubResource("AnimationNodeTransition_8id78")
nodes/aimTransition/position = Vector2(740, 590)
nodes/idle/node = SubResource("AnimationNodeAnimation_8jfl2")
nodes/idle/position = Vector2(100, 510)
nodes/output/position = Vector2(890, 580)
nodes/run/node = SubResource("AnimationNodeAnimation_oq02i")
nodes/run/position = Vector2(100, 820)
nodes/runTimeScale/node = SubResource("AnimationNodeTimeScale_fbppp")
nodes/runTimeScale/position = Vector2(300, 870)
nodes/walk/node = SubResource("AnimationNodeBlendSpace2D_pcidi")
nodes/walk/position = Vector2(90, 640)
nodes/walkTimeScale/node = SubResource("AnimationNodeTimeScale_5aoor")
nodes/walkTimeScale/position = Vector2(250, 720)
node_connections = [&"IdleWalkRunBlend", 0, &"idle", &"IdleWalkRunBlend", 1, &"walkTimeScale", &"IdleWalkRunBlend", 2, &"runTimeScale", &"aimTransition", 1, &"IdleWalkRunBlend", &"output", 0, &"aimTransition", &"runTimeScale", 0, &"run", &"walkTimeScale", 0, &"walk"]

[sub_resource type="BoxShape3D" id="BoxShape3D_t31la"]
size = Vector3(0.6, 1.7, 0.6)

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_501mk"]
length = 0.51

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_dq0rt")

[node name="visuals" type="Node3D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="visuals"]
libraries = {
"": SubResource("AnimationLibrary_g6ovt")
}
autoplay = "idle"

[node name="AnimationTree" type="AnimationTree" parent="visuals"]
libraries = {
"": SubResource("AnimationLibrary_g6ovt")
}
tree_root = SubResource("AnimationNodeBlendTree_sxeqy")
anim_player = NodePath("../AnimationPlayer")
parameters/IdleWalkRunBlend/blend_amount = 0.0
parameters/aimTransition/current_state = "notAiming"
parameters/aimTransition/transition_request = ""
parameters/aimTransition/current_index = 1
parameters/runTimeScale/scale = 2.0
parameters/walk/blend_position = Vector2(-0.138288, 0.174603)
parameters/walkTimeScale/scale = 1.0

[node name="pnTorso" type="Node3D" parent="visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0.942474, 0)

[node name="pnHead" type="Node3D" parent="visuals/pnTorso"]
transform = Transform3D(0.99, 0, 0, 0, 0.99, 0, 0, 0, 0.99, 2.59618e-10, 0.354758, -0.010039)

[node name="solomonHead" parent="visuals/pnTorso/pnHead" instance=ExtResource("2_eel4o")]

[node name="pnRightShoulder" type="Node3D" parent="visuals/pnTorso"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.185, 0)

[node name="pnRightHand" type="Node3D" parent="visuals/pnTorso/pnRightShoulder"]
transform = Transform3D(0.949998, 0, 0, 0, 0.949998, 0, 0, 0, 0.949998, 0.12, -0.36, 0)

[node name="solomonRightHand" parent="visuals/pnTorso/pnRightShoulder/pnRightHand" instance=ExtResource("3_8wfcb")]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, 0)

[node name="pnRightWeaponSlot" type="Node3D" parent="visuals/pnTorso/pnRightShoulder/pnRightHand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.113, -0.014468)

[node name="LongSword" parent="visuals/pnTorso/pnRightShoulder/pnRightHand/pnRightWeaponSlot" instance=ExtResource("4_wwvhn")]

[node name="solomonRightShoulder" parent="visuals/pnTorso/pnRightShoulder" instance=ExtResource("4_diqbd")]

[node name="pnLeftShoulder" type="Node3D" parent="visuals/pnTorso"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.185, 0)

[node name="pnLeftHand" type="Node3D" parent="visuals/pnTorso/pnLeftShoulder"]
transform = Transform3D(0.949998, 0, 0, 0, 0.949998, 0, 0, 0, 0.95, -0.12, -0.36, 0)

[node name="solomonLeftHand" parent="visuals/pnTorso/pnLeftShoulder/pnLeftHand" instance=ExtResource("3_x0gmy")]

[node name="pnLeftWeaponSlot" type="Node3D" parent="visuals/pnTorso/pnLeftShoulder/pnLeftHand"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.11, 0)

[node name="FlintlockPistol" parent="visuals/pnTorso/pnLeftShoulder/pnLeftHand/pnLeftWeaponSlot" instance=ExtResource("7_8lmmm")]

[node name="solomonLeftShoulder" parent="visuals/pnTorso/pnLeftShoulder" instance=ExtResource("4_hlefo")]
transform = Transform3D(-1, 0, -8.74228e-08, 3.55271e-15, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="solomonTorso" parent="visuals/pnTorso" instance=ExtResource("7_7cmkj")]

[node name="pnLeftFoot" type="Node3D" parent="visuals"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.16, 0, 0)

[node name="pnLeftLeg" type="Node3D" parent="visuals/pnLeftFoot"]
transform = Transform3D(1, 0, 0, 0, 0.999248, 0.038754, 0, -0.038754, 0.999248, 0.005, 0.124, -5.96046e-08)

[node name="solomonLeftLeg" parent="visuals/pnLeftFoot/pnLeftLeg" instance=ExtResource("5_4rcbk")]
transform = Transform3D(-1, 0, -8.74228e-08, -8.88178e-16, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="solomonLeftFoot" parent="visuals/pnLeftFoot" instance=ExtResource("6_fyuxa")]
transform = Transform3D(-1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0)

[node name="pnRightFoot" type="Node3D" parent="visuals"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0.16, 0, 0)

[node name="pnRightLeg" type="Node3D" parent="visuals/pnRightFoot"]
transform = Transform3D(1, 0, 0, 0, 0.999249, 0.038754, 0, -0.038754, 0.999249, -0.005, 0.124, -1.19209e-07)

[node name="solomonRightLeg" parent="visuals/pnRightFoot/pnRightLeg" instance=ExtResource("7_ntxyt")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 7.45058e-09, 8.74228e-08, 7.45058e-09, -1, 0, 0, 0)

[node name="solomonRightFoot" parent="visuals/pnRightFoot" instance=ExtResource("7_0k2ed")]

[node name="cameraMount" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="cameraMount"]
transform = Transform3D(0.948324, 0, 0.317305, 0, 1, 0, -0.317305, 0, 0.948324, 0, 0.7, 0)
spring_length = 2.43

[node name="Camera3D" type="Camera3D" parent="cameraMount/SpringArm3D"]
transform = Transform3D(0.948324, 0, -0.317305, 0, 1, 0, 0.317305, 0, 0.948324, 0.00329614, 0, 2.42644)

[node name="remoteTransforms" type="Node3D" parent="."]
script = ExtResource("13_vfudf")

[node name="collisionBoxRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
remote_path = NodePath("../../collisionBox")

[node name="frontLeftRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.31, 0.51, -0.31)
remote_path = NodePath("../../frontLeftSepRay")

[node name="frontRightRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.31, 0.51, -0.31)
remote_path = NodePath("../../frontRightSepRay")

[node name="frontRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.51, -0.31)
remote_path = NodePath("../../frontSepRay")

[node name="backLeftRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.31, 0.51, 0.31)
remote_path = NodePath("../../backLeftSepRay")

[node name="leftRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.31, 0.51, 0)
remote_path = NodePath("../../leftSepRay")

[node name="backRightRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.31, 0.51, 0.31)
remote_path = NodePath("../../backRightSepRay")

[node name="rightRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.31, 0.51, 0)
remote_path = NodePath("../../rightSepRay")

[node name="backRemTrans" type="RemoteTransform3D" parent="remoteTransforms"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.51, 0.31)
remote_path = NodePath("../../backSepRay")

[node name="collisionBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("BoxShape3D_t31la")

[node name="frontLeftSepRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.31, 0.51, -0.31)
shape = SubResource("SeparationRayShape3D_501mk")

[node name="frontSepRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.51, -0.31)
shape = SubResource("SeparationRayShape3D_501mk")

[node name="frontRightSepRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.31, 0.51, -0.31)
shape = SubResource("SeparationRayShape3D_501mk")

[node name="backLeftSepRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.31, 0.51, 0.31)
shape = SubResource("SeparationRayShape3D_501mk")

[node name="leftSepRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.31, 0.51, 0)
shape = SubResource("SeparationRayShape3D_501mk")

[node name="backSepRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.51, 0.31)
shape = SubResource("SeparationRayShape3D_501mk")

[node name="backRightSepRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.31, 0.51, 0.31)
shape = SubResource("SeparationRayShape3D_501mk")

[node name="rightSepRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.31, 0.51, 0)
shape = SubResource("SeparationRayShape3D_501mk")
